# android

./: .gitignore  Gemfile  README.md  Untitled  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: baselineprofile.yml  cd.yml  publish.yml  release.yml  uk.yml
app/: .gitignore  build.gradle.kts  google-services.json  release.keystore
app/release/: output-metadata.json
apps/signer/: .gitignore  README.md  apkdiff.py  apkfrombundle.py  build.gradle.kts  lint-baseline.xml  proguard-rules.pro
apps/singer/: build.gradle.kts  proguard-rules.pro
apps/x/: build.gradle.kts
argon2kt/: build.gradle.kts  proguard-rules.pro
argon2kt/src/main/cpp/: CMakeLists.txt
argon2kt/src/main/cpp/argon2/: argon2.h
argon2kt/src/main/cpp/jni/: Argon2Jni.cpp  Argon2JniVerification.cpp
baselineprofile/: build.gradle.kts
baselineprofile/main/: build.gradle.kts
baselineprofile/signer/: build.gradle.kts
baselineprofile/x/: build.gradle.kts
buildLogic/: settings.gradle.kts
buildLogic/plugin/: build.gradle.kts
core/: build.gradle.kts
core-ton/: build.gradle.kts
fastlane/: Appfile  Fastfile
gradle/wrapper/: gradle-wrapper.properties
lib/base64/: build.gradle.kts
lib/blockchain/: build.gradle.kts
lib/emoji/: build.gradle.kts
lib/extensions/: build.gradle.kts
localization/: build.gradle.kts  upd.py
network/: build.gradle.kts
qr/: build.gradle.kts
shimmer/: build.gradle.kts
stonfiapi/: build.gradle.kts  openapi.json  upd.sh
ton/: build.gradle.kts
tonapi/: build.gradle.kts  tonapi.sh  upd.sh
uikit/: build.gradle.kts
(+5908 files in other folders)
